fix(ui5-rating-indicator): apply correct spacings

--- a/packages/main/src/themes/RatingIndicator.css
+++ b/packages/main/src/themes/RatingIndicator.css
@@ -15,9 +15,9 @@
 	cursor: initial;
 }
 
-:host([disabled]) .ui5-rating-indicator-readonly-item-unsel,
-:host([readonly]) .ui5-rating-indicator-readonly-item-unsel {
-	color: var(--sapContent_UnratedColor);
+:host([disabled]) .ui5-rating-indicator-item-unsel,
+:host([readonly]) .ui5-rating-indicator-item-unsel {
+	padding-inline: var(--_ui5_rating_indicator_readonly_item_spacing);
 	width: var(--_ui5_rating_indicator_readonly_item_width);
 	height: var(--_ui5_rating_indicator_readonly_item_height);
 }
